Added combo box to select character.

--- a/index.html
+++ b/index.html
@@ -13,5 +13,14 @@
     <script src="js/engine.js"></script>
     <div>Lives:<span id="lives">10</span></div>
     <div>Score:<span id="score">0</span></div>
+    <div>
+        <select id="character-select">
+          <option value="boy">Boy</option>
+          <option value="catGirl">Cat Girl</option>
+          <option value="hornGirl">Horn Girl</option>
+          <option value="pinkGirl">Pink Girl</option>
+          <option value="princess">Princess</option>
+        </select>
+    </div>
 </body>
 </html>
