Added star and made speed slow down for a short period of time when star is found.

--- a/index.html
+++ b/index.html
@@ -22,5 +22,8 @@
           <option value="princess">Princess</option>
         </select>
     </div>
+<!--    <div class="slider-wrapper">-->
+      <input id="speed-slider" type="range" min="-50" max="150" value="50" step="1" >
+<!--    </div>-->
 </body>
 </html>
