Added button to toggle whether sound plays or not.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Effective JavaScript: Frogger</title>
     <link rel="stylesheet" href="css/style.css">
     <link href="css/sweetalert.css" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css" rel="stylesheet prefetch">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="js/sweetalert.min.js"></script>
 </head>
@@ -14,6 +15,9 @@
     <script src="js/engine.js"></script>
     <div>Lives:<span id="lives">5</span></div>
     <div>Score:<span id="score">0</span></div>
+    <div class="btnRound">
+		<a aria-hidden="true" class="fa fa-volume-up"></a>
+    </div>
     <div>
         <select id="character-select">
           <option value="boy">Boy</option>
@@ -25,6 +29,8 @@
     </div>
 <!--    <div class="slider-wrapper">-->
       <input id="speed-slider" type="range" min="-50" max="150" value="50" step="1" >
+    
+<!--    <i aria-hidden="true" class="fa fa-diamond"></i>-->
 <!--    </div>-->
 </body>
 </html>
