Made how to play section show on left and character selection show on right

--- a/index.html
+++ b/index.html
@@ -10,22 +10,98 @@
     <script src="js/sweetalert.min.js"></script>
 </head>
 <body>
-    <script src="js/resources.js"></script>
-    <script src="js/app.js"></script>
-    <script src="js/engine.js"></script>
-    <div>Lives:<span id="lives">5</span></div>
-    <div>Score:<span id="score">0</span></div>
-    <div class="btnRound">
-		<a aria-hidden="true" class="fa fa-volume-up"></a>
-    </div>
-    <div>
-        <select id="character-select">
-          <option value="boy">Boy</option>
-          <option value="catGirl">Cat Girl</option>
-          <option value="hornGirl">Horn Girl</option>
-          <option value="pinkGirl">Pink Girl</option>
-          <option value="princess">Princess</option>
-        </select>
+     <header>
+        <h1 id="pate-title">Arcade Game Demo</h1>
+    </header>
+    <div id="container">
+        <aside id="left">
+            <h2>Game Rules</h2>
+            <table>
+                <tr>
+                    <td><img src="images/arrows.png" alt="Arrows"></td>
+                    <td>move player</td>
+                </tr>
+                <tr>
+                    <td class="small"><img src="images/water-block.png" alt="Water block"></td>
+                    <td>reach the water <br>(20 pts and continue)</td>
+                </tr>
+                <tr>
+                    <td class="small"><img src="images/grass-block.png" alt="Grass block"></td>
+                    <td>safe zone</td>
+                </tr>
+                <tr>
+                    <td class="small"><img src="images/enemy-bug.png" alt="Enemy bug"></td>
+                    <td>avoid the bug</td>
+                </tr>
+                <tr>
+                    <td class="small"><img src="images/Rock.png" alt="Rock"></td>
+                    <td>obstacle</td>
+                </tr>
+                <tr>
+                    <td class="small">
+                        <img src="images/Heart.png" alt="Heart">
+                        <img src="images/Star.png" alt="Star">
+                        <img src="images/Key.png" alt="Key">
+                    </td>
+                    <td>collect = 10 pts (each)</td>
+                </tr>
+                <tr>
+                    <td class="small">
+                        <img src="images/Gem Blue.png" alt="Gem Blue">
+                        <img src="images/Gem Green.png" alt="Gem Green">
+                        <img src="images/Gem Orange.png" alt="Gem Orange">
+                    </td>
+                    <td>collect = 30 pts (each)</td>
+                </tr>
+                <tr>
+                    <td class="small"><img src="images/Selector.png" alt="Selector"></td>
+                    <td>collect = 50 pts</td>
+                </tr>
+            </table>
+        </aside>
+        
+        <div id="main">
+            <div id="game">
+                <script src="js/resources.js"></script>
+                <script src="js/app.js"></script>
+                <script src="js/engine.js"></script>
+            </div>
+            <div>Lives:<span id="lives">5</span></div>
+            <div>Score:<span id="score">0</span></div>
+            <div class="btnRound">
+                <a aria-hidden="true" class="fa fa-volume-up"></a>
+            </div>
+            <div>
+                <select id="character-select">
+                  <option value="boy">Boy</option>
+                  <option value="catGirl">Cat Girl</option>
+                  <option value="hornGirl">Horn Girl</option>
+                  <option value="pinkGirl">Pink Girl</option>
+                  <option value="princess">Princess</option>
+                </select>
+            </div>
+        </div>
+        
+        <aside id="right">
+            <div id="players">
+                <h2>Choose a player</h2>
+                <div class="crop selected">
+                    <img id="char-boy" src="images/char-boy.png" alt="Boy">
+                </div>
+                <div class="crop">
+                    <img id="char-cat-girl" src="images/char-cat-girl.png" alt="Cat Girl">
+                </div>
+                <div class="crop">
+                    <img id="char-horn-girl" src="images/char-horn-girl.png" alt="Horn Girl">
+                </div>
+                <div class="crop">
+                    <img id="char-pink-girl" src="images/char-pink-girl.png" alt="Pink Girl">
+                </div>
+                <div class="crop">
+                    <img id="char-princess-girl" src="images/char-princess-girl.png" alt="Princess Girl">
+                </div>
+            </div>
+        </aside>
     </div>
 </body>
 </html>
