Added character names on character options on the right.

--- a/index.html
+++ b/index.html
@@ -22,30 +22,30 @@
                     <td>move player</td>
                 </tr>
                 <tr>
-                    <td class="small"><img src="images/water-block.png" alt="Water block"></td>
+                    <td ><img src="images/water-block.png" alt="Water block"></td>
                     <td>reach the water <br>(1 point and continue)</td>
                 </tr>
                 <tr>
-                    <td class="small"><img src="images/grass-block.png" alt="Grass block"></td>
+                    <td ><img src="images/grass-block.png" alt="Grass block"></td>
                     <td>safe zone</td>
                 </tr>
                 <tr>
-                    <td class="small"><img src="images/enemy-bug.png" alt="Enemy bug"></td>
+                    <td ><img src="images/enemy-bug.png" alt="Enemy bug"></td>
                     <td>avoid the bug</td>
                 </tr>
                 <tr>
-                    <td class="small">
+                    <td >
                         <img src="images/Heart.png" alt="Heart">
                     </td>
                     <td>Lives +1</td>
                 </tr>
                 <tr>
-                    <td class="small"><img src="images/Star.png" alt="Selector"></td>
+                    <td ><img src="images/Star.png" alt="Selector"></td>
                     <td>Slow time for 5 seconds</td>
                 </tr>
                 
                 <tr>
-                    <td class="small"><img id="bar" src="images/YellowBar2.png" alt="Selector" ></td>
+                    <td ><img id="bar" src="images/YellowBar2.png" alt="Selector" ></td>
                     <td>Time remaining on<br> time slow down</td>
                 </tr>
             </table>
@@ -66,24 +66,53 @@
             </section>
         </div>
         
-        <aside id="right">
+<!--
+        <aside id="player-options">
             <div id="players">
-                <h2>Choose a player</h2>
-                <div class="crop selected">
-                    <img id="char-boy" src="images/char-boy.png" alt="Boy">
+                <h2>Character Options</h2>
+                <div class="oval">
+                    <img id="char-pink-girl" src="images/char-pink-girl.png" alt="Pink Hair Girl">
                 </div>
-                <div class="crop">
-                    <img id="char-cat-girl" src="images/char-cat-girl.png" alt="Cat Girl">
+                <div class="oval">
+                    <img id="char-cat-girl" src="images/char-cat-girl.png" alt="Cat Hat Girl">
                 </div>
-                <div class="crop">
+                <div class="oval">
                     <img id="char-horn-girl" src="images/char-horn-girl.png" alt="Horn Girl">
                 </div>
-                <div class="crop">
-                    <img id="char-pink-girl" src="images/char-pink-girl.png" alt="Pink Girl">
-                </div>
-                <div class="crop">
+                <div class="oval">
                     <img id="char-princess-girl" src="images/char-princess-girl.png" alt="Princess Girl">
                 </div>
+                <div class="oval selected">
+                    <img id="char-boy" src="images/char-boy.png" alt="Boy">
+                </div>
+            </div>
+        </aside>
+-->
+         <aside id="player-options">
+            <div id="players">
+                <h2>Character Options</h2>
+                <table>
+                    <tr>
+                        <td><img class="selected"  id="char-pink-girl" src="images/char-pink-girl.png" alt="Pink Hair Girl"></td>
+                        <td>Pinky</td>
+                    </tr>
+                    <tr>
+                        <td><img id="char-cat-girl" src="images/char-cat-girl.png" alt="Cat Hat Girl"></td>
+                        <td>Cat Girl</td>
+                    </tr>
+                    <tr>
+                        <td><img id="char-horn-girl" src="images/char-horn-girl.png" alt="Horn Girl"></td>
+                        <td>She Devil</td>
+                    </tr>
+                    <tr>
+                        <td> <img id="char-princess-girl" src="images/char-princess-girl.png" alt="Princess Girl"></td>
+                        <td>Princess</td>
+                    </tr>
+                    <tr>
+                        <td><img id="char-boy" src="images/char-boy.png" alt="Boy"></td>
+                        <td>Boy Wonder</td>
+                    </tr>
+                </table>
             </div>
         </aside>
     </div>
