Reworded game rules.

--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@
             <table>
                 <tr>
                     <td ><img class="arrows"  src="images/arrows3.png" alt="Arrows"></td>
-                    <td>move player</td>
+                    <td>Move player with arrows</td>
                 </tr>
                 <tr>
                     <td ><img src="images/water-block.png" alt="Water block"></td>
-                    <td>reach the water <br>(1 point and continue)</td>
+                    <td>The goal is to reach the water <br>(1 point and continue)</td>
                 </tr>
                 <tr>
                     <td ><img src="images/grass-block.png" alt="Grass block"></td>
-                    <td>safe zone</td>
+                    <td>Starting area</td>
                 </tr>
                 <tr>
                     <td ><img src="images/enemy-bug.png" alt="Enemy bug"></td>
-                    <td>avoid the bug</td>
+                    <td>Bug's hurt you</td>
                 </tr>
                 <tr>
                     <td >
@@ -65,29 +65,7 @@
                 </div>
             </section>
         </div>
-        
-<!--
-        <aside id="player-options">
-            <div id="players">
-                <h2>Character Options</h2>
-                <div class="oval">
-                    <img id="char-pink-girl" src="images/char-pink-girl.png" alt="Pink Hair Girl">
-                </div>
-                <div class="oval">
-                    <img id="char-cat-girl" src="images/char-cat-girl.png" alt="Cat Hat Girl">
-                </div>
-                <div class="oval">
-                    <img id="char-horn-girl" src="images/char-horn-girl.png" alt="Horn Girl">
-                </div>
-                <div class="oval">
-                    <img id="char-princess-girl" src="images/char-princess-girl.png" alt="Princess Girl">
-                </div>
-                <div class="oval selected">
-                    <img id="char-boy" src="images/char-boy.png" alt="Boy">
-                </div>
-            </div>
-        </aside>
--->
+   
          <aside id="player-options">
             <div id="players">
                 <h2>Character Options</h2>
